@startuml

title __Hangman__\n

  namespace Hangman {
    class Hangman {
        ~ bestScore : int
        ~ bestScoreWord : String
        ~ gamesCount : int
        ~ gamesWon : int
        + init()
        {static} + main()
        + run()
        - createHint()
        - displayHangman()
        - getRandomWord()
        - intro()
        - playOneGame()
        - readGuess()
        - stats()
    }
  }
  

  namespace HangmanCanvas {
    class HangmanCanvas {
        {static} - TEXT_HEIGHT : int
        {static} - TEXT_X_OFFSET : int
        - textX : int
        - textY : int
        + clear()
        + printText()
        + reset()
    }
  }
  

  Hangman -up-|> acm.program.ConsoleProgram
  Hangman o-- HangmanCanvas : canvas
  HangmanCanvas -up-|> acm.graphics.GCanvas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
